<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="clear">c</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="deleteLast">&lt;&lt;</string>
    <string name="subtract">–</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="inverse">1/x</string>
    <string name="quadrate">x^2</string>
    <string name="squareRoot">√</string>
    <string name="factorial">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="log">log</string>

</resources>
